Add tmux-prefix-highlight to tmux

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -45,15 +45,15 @@ set -g default-terminal "screen-256color"
 
 # Dracula Color Pallette
 white='#f8f8f2'
-gray='#44475a' #ok
+gray='#44475a'
 dark_gray='#282a36'
-light_purple='#bd93f9' #ok
-dark_purple='#6272a4' #ok
-cyan='#8be9fd' #ok
+light_purple='#bd93f9'
+dark_purple='#6272a4'
+cyan='#8be9fd'
 green='#50fa7b'
-orange='#ffb86c' #ok
+orange='#ffb86c'
 red='#ff5555'
-pink='#ff79c6' #ok
+pink='#ff79c6'
 yellow='#f1fa8c'
 
 # panes
@@ -85,13 +85,20 @@ set -g status-left-style "fg=${gray},bg=${pink}"
 set -g status-left " #S #[fg=${pink},bg=${cyan}]${right_sep} #[fg=${gray},bg=${cyan}]#W #[fg=${cyan},bg=${orange}]${right_sep} #[fg=${gray},bg=${orange}]#(whoami) #[fg=${orange},bg=${gray}]${right_sep}"
 
 set -g status-right-length '100'
-set -g status-right "#[fg=${yellow},bg=${gray}]${left_sep}#[fg=${gray},bg=${yellow} bold] #H #[fg=${green},bg=${yellow} bold]${left_sep}#[fg=${gray},bg=${green} bold] %d/%m/%y #[fg=${red},bg=${green} bold]${left_sep}#[fg=${gray},bg=${red} bold] %H:%M:%S %Z "
+set -g status-right "#[fg=${white},bg=${gray}]${left_sep}#{prefix_highlight}#[fg=${yellow},bg=${white}]${left_sep}#[fg=${gray},bg=${yellow} bold] #H #[fg=${green},bg=${yellow} bold]${left_sep}#[fg=${gray},bg=${green} bold] %d/%m/%y #[fg=${red},bg=${green} bold]${left_sep}#[fg=${gray},bg=${red} bold] %H:%M:%S %Z "
 
 #####################################################################
 # Plugins                                                           #
 #####################################################################
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+#custom prefix highlight
+set -g @prefix_highlight_fg "${dark_gray}" # default is 'colour231'
+set -g @prefix_highlight_bg "${white}"  # default is 'colour04'
+set -g @prefix_highlight_empty_prompt '  '  # default is '' (empty char)
+set -g @prefix_highlight_empty_attr "fg=${gray},bg=${white}" # default is 'fg=default,bg=default'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
